fix: remove extra padding in panel selection modal

--- a/frontend/src/container/DashboardContainer/PanelTypeSelectionModal/PanelTypeSelectionModal.styles.scss
+++ b/frontend/src/container/DashboardContainer/PanelTypeSelectionModal/PanelTypeSelectionModal.styles.scss
@@ -31,7 +31,6 @@
 			.panel-selection {
 				display: flex;
 				flex-flow: wrap;
-				padding: 16px;
 				gap: 16px;
 
 				.selected {
